Add /charts/candle viz with go-echarts Fixed sdk/types to use integer timestamps Fixed direction of results to ascending time
